feat(camera): done ui in CameraScreen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="b_blue">#FF0174F5</color>
     <color name="b_gray">#FFF0F0F0</color>
     <color name="white_background">#FFE6E5E9</color>
+    <color name="normal_text">#FF494A50</color>
+    <color name="bold_text">#FF1F2024</color>
 </resources>
