--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="white_background">#FFE6E5E9</color>
     <color name="normal_text">#FF494A50</color>
     <color name="bold_text">#FF1F2024</color>
+    <color name="second_primary">#FFB37C</color>
 </resources>
