--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="white_light">#FFF8F9FE</color>
     <color name="white_lightest">#FFFFFFFF</color>
     <color name="red_medium">#FFFF616D</color>
+    <color name="blue_icon">#FFEAF2FF</color>
 
     <color name="second_primary">#FFB37C</color>
 </resources>
